[tool.poetry]
name = "learnpytorch"
version = "0.1.0"
description = ""
authors = ["wojiazaiyugang <wojiazaiyugang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
torchvision = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
